# rossum_homework

./: .env  .pre-commit-config.yaml  Dockerfile  README.md  app.py  config.py  pyproject.toml
clients/: postbin.py  rossum.py
formatters/: xml.py
tests/: conftest.py  constants.py  export.py
views/: export.py
