[tool.poetry]
name = "python-poetry-docker-example"
version = "0.1.0"
description = ""
authors = ["Someone <someone@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.1.2"
flask-httpauth = "^4.8.0"
flask-expects-json = "^1.7.0"
requests = "^2.32.3"
lxml = "^5.3.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"