[tool.poetry]
name = "rossum-homework"
version = "0.1.0"
description = ""
authors = ["Petr Bezoušek <petrbezouske@email.cz>"]

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.1.2"
flask-httpauth = "^4.8.0"
flask-expects-json = "^1.7.0"
requests = "^2.32.3"
lxml = "^5.3.0"
structlog = "^24.4.0"
python-dotenv= "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^8.3.3"
pytest-dotenv = "^0.5.2"
pre-commit = "^4.0.1"
ruff = "0.7.2"

[tool.ruff]
line-length = 120
target-version = "py311"
lint.select = [
    "I",     # isort
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
